# byteaway

./: .gitignore  .gitmodules  AI_HANDOFF.md  B2B_DOCUMENTATION.md  B2B_PRESENTATION.md  B2B_QUICK_START.md  README.md  RELEASE_README.md  SECURITY_PRINCIPLES.md  b2b_tester.py  build.ps1  create_test_client.sql  docker-compose.yml  nginx.conf  package-lock.json  release.py
android/: pubspec.yaml
android/android/: gradle.properties  settings.gradle.kts
android/android/app/: build.gradle.kts  proguard-rules.pro
android/go_core/: go.mod  go.sum  test.go
android/go_core/boxwrapper/: boxwrapper.go  localproxy.go  singbox.go
android/go_core/xraywrapper_old/: xraywrapper.go
android/lib/: main.dart
android/lib/app/: di.dart  router.dart
android/lib/core/: app_constants.dart  constants.dart  logger.dart
android/lib/core/errors/: exceptions.dart  failures.dart
android/lib/core/network/: api_client.dart  ws_client.dart
android/lib/core/services/: app_update_service.dart  device_info_service.dart
android/lib/data/datasources/: auth_local_ds.dart  auth_remote_ds.dart  balance_remote_ds.dart  node_remote_ds.dart  stats_remote_ds.dart
android/lib/data/models/: balance_model.dart  node_config.dart  node_status_model.dart  traffic_record_model.dart
android/lib/data/repositories/: auth_repository_impl.dart  node_repository_impl.dart  stats_repository_impl.dart  vpn_repository_impl.dart
android/lib/domain/entities/: balance.dart  node_status.dart  traffic_record.dart  vpn_status.dart
android/lib/domain/repositories/: auth_repository.dart  node_repository.dart  stats_repository.dart  vpn_repository.dart
android/lib/domain/usecases/: login_usecase.dart  node_usecases.dart  stats_usecases.dart  vpn_usecases.dart
android/lib/presentation/auth/: auth_cubit.dart  auth_screen.dart  auth_state.dart
android/test/: widget_test.dart
android_new/: README.md  pubspec.yaml
android_new/android/app/: build.gradle.kts  proguard-rules.pro
android_new/go_core/: go.mod  go.sum
android_new/go_core/boxwrapper/: boxwrapper.go  singbox.go
android_new/lib/: main.dart
android_new/lib/app/: app.dart  di.dart  router.dart
android_new/lib/core/: constants.dart
android_new/lib/widgets/: app_scaffold.dart  primary_button.dart
b2b_connector/: README.md  byteaway_connector.py
docs/: vpn_working_backup.md
docs/en/: design.md  master_node.md  mobile_app.md
docs/ru/: architecture.md  design.md  master_node.md  mobile_app.md
master_node/: .env.template  Cargo.toml  Dockerfile  create_api_keys.py
master_node/.cargo/: config.toml
master_node/admin/: index.html
master_node/admin_ui/: api_keys.html
master_node/migrations/: 002_create_api_keys.sql  20231010_init_schema.sql  20240115_vpn_sessions.sql  20260401_reward_days.sql  20260403_free_daily_quota.sql  20260405_business_accounts.sql  20260424_fix_node_columns.sql  20260425_b2b_api_system.sql  20260426_client_logs.sql  20260427_device_hwid.sql
master_node/sing-box/: config.json  hysteria2-client-template.json
master_node/src/: api_keys.rs  api_keys_handlers.rs  config.rs  database.rs  error.rs  logging.rs  main.rs  singbox_server.rs  state.rs  vpn_handlers.rs
master_node/src/api/: admin.rs  app_update.rs  business.rs  business_auth.rs  handlers.rs  mod.rs  monitoring.rs  public.rs  routes.rs  turnstile.rs  vpn.rs
master_node/src/auth/: middleware.rs  mod.rs
master_node/src/billing/: engine.rs  mod.rs
master_node/src/node_manager/: handlers.rs  hy2_tunnel.rs  mod.rs  ostp_tunnel.rs  quic_tunnel.rs  registry.rs  tuic_tunnel.rs  wire.rs  ws_tunnel.rs
master_node/src/proxy_gateway/: router.rs  server.rs
master_node/src/vpn/: gateway.rs
monitor/: Cargo.toml
monitor/src/: api.rs  main.rs
node_client/: Cargo.toml  Dockerfile
node_client/src/: main.rs
ostp/: Cargo.toml  README.md
ostp/docs/: DEPLOY.md  INTEGRATIONS.md  WINDOWS_CLIENT.md  core_issues.md
ostp/ostp-android-jni/: Cargo.toml
ostp/ostp-android-jni/.cargo/: config.toml
ostp/ostp-android-jni/src/: lib.rs
ostp/ostp-client/: Cargo.toml  ostp-client.toml.example
ostp/ostp-client/src/: app.rs  bridge.rs  config.rs  main.rs  signal.rs  sysproxy.rs
ostp/ostp-client/src/tui/: mod.rs
ostp/ostp-client/src/tui/components/: controls.rs  dashboard.rs  logs.rs  mod.rs  traffic.rs
ostp/ostp-client/src/tunnel/: mod.rs  proxy.rs
ostp/ostp-core/: Cargo.toml
ostp/ostp-core/src/: lib.rs  protocol.rs  relay.rs
ostp/ostp-core/src/crypto/: aead.rs  kex.rs  mod.rs  noise.rs
ostp/ostp-core/src/framing/: frame.rs  mod.rs  padding.rs
ostp/ostp-obfuscator/: Cargo.toml
ostp/ostp-obfuscator/src/: engine.rs  lib.rs
ostp/ostp-server/: Cargo.toml  ostp-server.toml.example
ostp/ostp-server/src/: auth_store.rs  config.rs  dispatcher.rs  main.rs  tui.rs
ostp/scripts/: build_client_windows.ps1  deploy_ostp.sh
scripts/b2b/: report_error.ps1  report_error.sh
web/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
web/public/downloads/: android.json
web/src/: App.tsx  i18n.ts  index.css
web/src/api/: client.ts
web/src/components/: TurnstileWidget.tsx
web/src/pages/: Download.tsx  HowItWorks.tsx  Landing.tsx  NotFound.tsx
web/src/types/: turnstile.d.ts
(+91 files in other folders)
