[package]
name = "master_node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6"
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5"
colored = "2"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["fs", "limit", "set-header"] }
quinn = "0.11"
rustls-pemfile = "2.1"
argon2 = "0.5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ostp-core = { path = "../ostp/ostp-core" }
futures-util = { version = "0.3.32", features = ["sink", "std"] }
rustls = { version = "0.23.39", features = ["ring", "std"] }
base64 = "0.22"

[patch.crates-io]
getrandom = { git = "https://github.com/rust-random/getrandom", rev = "v0.2.15" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
