[package]
name = "ostp-android-jni"
version = "0.1.0"
edition = "2021"

[lib]
name = "ostp_android_jni"
crate-type = ["cdylib"]

[dependencies]
ostp-core = { path = "../ostp-core" }
jni = "0.21"
bytes = "1"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
log = "0.4"
android_logger = "0.13"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
