[package]
name = "ostp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
quinn.workspace = true
ostp-core = { path = "../ostp-core" }
ostp-obfuscator = { path = "../ostp-obfuscator" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ratatui = "0.28"
crossterm = "0.28"
uuid = { version = "1.10", features = ["v4"] }
